--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "pnpm": ">=8",
+    "npm": "false",
+    "yarn": "false"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -20,8 +25,10 @@
     "motion": "^12.9.2",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.5.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
@@ -31,7 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9.25.1",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
