--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
