--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,18 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# Build artifacts
+dist/
+*.log
+.cache/
+
+# Local development
+*.local
