--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-email/components": "^0.0.41",
+    "@react-email/render": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
