--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -33,6 +34,7 @@
     "@react-email/components": "^0.0.41",
     "@react-email/render": "^1.1.2",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.34.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
     "bcryptjs": "^3.0.2",
