--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
+    "@livekit/components-react": "^2.9.12",
+    "@livekit/components-styles": "^1.1.6",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -44,6 +46,8 @@
     "cmdk": "^1.1.1",
     "framer-motion": "^12.16.0",
     "input-otp": "^1.4.2",
+    "livekit-client": "^2.13.8",
+    "livekit-server-sdk": "^2.13.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "next": "15.3.1",
